--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,2 +1,47 @@
-<h1>Admin::Genres#index</h1>
-<p>Find me in app/views/admin/genres/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h2>ジャンル一覧・追加</h2>
+    </div>
+  </div>
+
+  <% if @genre.errors.any? %>
+  <%= @genre.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @genre.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+  <% end %>
+
+  <%= form_with model: @genre, url: admin_genres_path do |f| %>
+  <div class="row">
+    <div class="col">
+      <%= f.label :name, "ジャンル名" %>
+      <%= f.text_field :name, placeholder: "ジャンル名" %>
+      <%= f.submit "新規登録", class: "btn btn-success" %>
+    </div>
+  </div>
+  <% end %>
+
+  <div class="row">
+    <div class="col">
+      <table>
+        <thead>
+          <tr>
+            <th>ジャンル</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @genres.each do |genre| %>
+          <tr>
+            <td><%= genre.name %></td>
+            <td><%= link_to "編集する", edit_admin_genre_path(genre), class: "btn btn-success" %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
