--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,2 +1,58 @@
-<h1>Admin::Items#new</h1>
-<p>Find me in app/views/admin/items/new.html.erb</p>
+<div class="container">
+
+  <div class="row">
+    <div class="col">
+      <h2>商品新規登録</h2>
+    </div>
+  </div>
+
+  <% if @item.errors.any? %>
+  <%= @item.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @item.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+  <div class="row mx-auto">
+    <%= form_with model:@item, url:admin_items_path do |f| %>
+    <tabel>
+      <tr>
+        <td><%= f.label :商品画像 %></td>
+        <td><%= f.file_field :image, accept: "image/*" %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :商品名 %></td>
+        <td><%= f.text_field :name, placeholder: "商品名" %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :商品説明 %></td>
+        <td><%= f.text_area :introduction, placeholder: "ここに説明文を記述します" %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :ジャンル %></td>
+        <td><%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "--選択して下さい--" %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :税抜価格 %></td>
+        <td><%= f.text_field :price, placeholder: "1000" %>円</td>
+      </tr>
+       <tr>
+        <td><%= f.label :販売ステータス %></td>
+        <td>
+          <%= f.radio_button :is_active, :true, checked: true %>
+          <%= f.label :status_ture, "販売中" %>
+          <%= f.radio_button :is_active, :false %>
+          <%= f.label :status_false, "販売停止中" %>
+         </tr>
+    </tabel>
+      <div class="row">
+        <div class="col mx-auto">
+          <%= f.submit "新規登録", class:'btn btn-lg btn-success' %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+</div>
