--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,2 +1,48 @@
-<h1>Admin::Items#edit</h1>
-<p>Find me in app/views/admin/items/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h2>商品編集</h2>
+    </div>
+  </div>
+
+  <div class="row mx-auto">
+    <%= form_with model: @item, url:admin_item_path, method: :patch, local: true do |f| %>
+    <table>
+      <tr>
+        <td><%= f.label :商品画像 %></td>
+        <td><%= f.file_field :image, accept: "image/*" %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :商品名 %></td>
+        <td><%= f.text_field :name %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :商品説明 %></td>
+        <td><%= f.text_area :introduction %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :ジャンル %></td>
+        <td><%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "--選択してください--" %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :税抜価格 %></td>
+        <td><%= f.text_field :price %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :販売ステータス %></td>
+        <td>
+          <%= f.radio_button :is_active, :true, checked: true %>
+          <%= f.label :status_ture, "販売中" %>
+          <%= f.radio_button :is_active, :false %>
+          <%= f.label :status_false, "販売停止中" %>
+      </tr>
+    </table>
+
+    <div class="row">
+      <div class="col mx-auto">
+        <%= f.submit "変更を保存", class:'btn btn-success' %>
+      </div>
+    </div>
+    <% end %>
+  </div>
+</div>
