--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -49,7 +49,7 @@
     </tabel>
       <div class="row">
         <div class="col mx-auto">
-          <%= f.submit "新規登録", class:'btn btn-lg btn-success' %>
+          <%= f.submit "新規登録", class:'btn btn-success' %>
         </div>
       </div>
     <% end %>
