--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,45 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h2>商品詳細</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <%= image_tag @item.image, size: "300x200" %>
+    </div>
+    <div class="col">
+      <table>
+        <tr>
+          <td>商品名</td>
+          <td><%= @item.name %></td>
+        </tr>
+        <tr>
+          <td>商品説明</td>
+          <td><%= @item.introduction %></td>
+        </tr>
+        <tr>
+          <td>税込価格</br>（税抜価格）</td>
+          <td><%= (@item.price*1.1).floor %>(<%= @item.price %>) 円</td>
+        </tr>
+        <tr>
+          <td>販売ステータス</td>
+          <td>
+            <% if @item.is_active == true %>
+              販売中
+            <% else %>
+              販売停止中
+            <% end %>
+          </td>
+        </tr>
+      </table>
+
+      <div class="row">
+        <div class="col mx-auto">
+          <%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-success" %>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
