[add]admin login

--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,2 +1,37 @@
-<h1>Admin::Customers#show</h1>
-<p>Find me in app/views/admin/customers/show.html.erb</p>
+<h2>さんの会員詳細</h2>
+<div>
+  <table class="table">
+    <thead></thead>
+    <tbody>
+      <tr>
+        <th>会員ID</th><td>テスト</td>
+      </tr>
+      <tr>
+        <th>氏名</th><td></td>
+      </tr>
+      <tr>
+        <th>フリガナ</th><td></td>
+      </tr>
+      <tr>
+        <th>郵便番号</th><td></td>
+      </tr>
+      <tr>
+        <th>住所</th><td></td>
+      </tr>
+      <tr>
+        <th>電話番号</th><td></td>
+      </tr>
+      <tr>
+        <th>メールアドレス</th><td></td>
+      </tr>
+      <tr>
+        <th>会員ステータス</th><td></td>
+      </tr>
+      <tr>
+        <td>編集する</td>
+        <td>注文履歴一覧を見る</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
