--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<h2>会員一覧</h2>
+<%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+<div>
+  <table class="table table-borderd">
+    <thead>
+      <tr>
+        <th>会員ID</th>
+        <th colspan="3">氏名</th>
+        <th colspan="3">メールアドレス</th>
+        <th>ステータス</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>テスト</td>
+        <td>テスト</td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
