--- a/app/views/public/shared/_links.html.erb
+++ b/app/views/public/shared/_links.html.erb
@@ -1,7 +1,14 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <h2>既に登録済みの方</h2>
+  <p>
+    <%= link_to "こちら", new_session_path(resource_name) %> からログインして下さい。
+  </p>
+  
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <h2>会員登録がお済みでない方</h2>
+  <p>
+    <%= link_to "こちら", new_registration_path(resource_name) %> から新規登録を行って下さい。
+  </p>
 <% end %>
