--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,2 +1,54 @@
 <h1>Public::Addresses#index</h1>
-<p>Find me in app/views/public/addresses/index.html.erb</p>
+<% if @address.errors.any? %>
+  <%= @address.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @address.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<%= form_with model: @addess do |f| %>
+  <h4>郵便番号</h4>
+  <%= f.text_field :post_code %>
+	
+  <h4>配送先住所</h4>
+  <%= f.text_area :address %>
+  
+  <h4>宛名</h4>
+  <%= f.text_area :name %>
+	
+  <%= f.submit '配送先登録' %>
+<% end %>
+
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-8 offset-md-1">
+      <h2>配送先一覧</h2>
+      <table class="table table-hover table-inverse">
+      <thead>
+    　　<tr>
+    　　    <th></th>
+          <th>郵便番号</th>
+          <th>住所</th>
+          <th>宛名</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @addresses.each do |address| %>
+          <tr>
+          <td>
+            <%= address.post_code %>
+          </td>
+          <td>
+            <%= address.address %>
+          </td>
+          <td>
+            <%= address.name %>
+          </td>
+          </tr>
+        <% end %>
+      </tbody>
+     
