[add]admin/customers index,edit,show

--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -28,7 +28,7 @@
         <th>会員ステータス</th><td></td>
       </tr>
       <tr>
-        <td>編集する</td>
+        <td><%= link_to "編集する", edit_admin_customer_path, class: "btn btn-success" %></td>
         <td>注文履歴一覧を見る</td>
       </tr>
     </tbody>
