--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,1 +1,42 @@
 <h2>さんの会員情報編集</h2>
+<div class="form-group">
+  <%= form_with model: @customer do |f| %>
+  <div class="field">
+    <%= f.label :customer_id, "会員ID" %>
+    あとから
+  </div>
+  <div class="field">
+    <%= f.label :name, "氏名" %>
+    <%= f.text_field :last_name %>
+    <%= f.text_field :first_name %>
+  </div>
+  <div class="field">
+    <%= f.label :kana_name, "フリガナ" %>
+    <%= f.text_field :kana_last_name %>
+    <%= f.text_field :kana_first_name %>
+  </div>
+  <div class="field">
+    <%= f.label :post_code, "郵便番号" %>
+    <%= f.text_field :post_code %>
+  </div>
+  <div class="field">
+    <%= f.label :address, "住所" %>
+    <%= f.text_field :address %>
+  </div>
+  <div class="field">
+    <%= f.label :telephone_number, "電話番号" %>
+    <%= f.text_field :telephone_number %>
+  </div>
+  <div class="field">
+    <%= f.label :email, "メールアドレス" %>
+    <%= f.email_field :email %>
+  </div>
+  <div class="field">
+    <%= f.label :is_deleted, "会員ステータス" %>
+    ステータスあとから
+  </div>
+  <div class="action">
+    <%= f.submit "変更を保存", class: "btn btn-success" %>
+  </div>
+  <% end %>
+</div>
