[update]admin/customers

--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -2,21 +2,21 @@
   <div class="row">
     <div class="col">
       
-      <% if @customer.errors.any? %>
-        <%= @customer.errors.count %>件のエラーが発生しました
-        <ul>
-          <% @customer.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
-      <% end %>
+      <!--% if @customer.errors.any? %>-->
+      <!--  %= @customer.errors.count %>件のエラーが発生しました-->
+      <!--  <ul>-->
+      <!--    % @customer.errors.full_messages.each do |message| %>-->
+      <!--      <li>%= message %></li>-->
+      <!--    % end %>-->
+      <!--  </ul>-->
+      <!--% end %>-->
 
-      <h2><%= @customer.name %>さんの会員情報編集</h2>
+      <!--<h2>%= @customer.name %>さんの会員情報編集</h2>-->
       <div class="form-group">
         <%= form_with model: @customer do |f| %>
         <div class="field">
           <%= f.label :customer_id, "会員ID" %>
-          <%= @custome.id %>
+          <!--%= @customer.id %>-->
         </div>
         <div class="field">
           <%= f.label :name, "氏名" %>
@@ -46,7 +46,10 @@
         </div>
         <div class="field">
           <%= f.label :is_deleted, "会員ステータス" %>
-          ステータスあとから
+          <%= f.radio_button :is_deleted, 'false' %>
+          <%= f.label :is_deleted, "有効", value: false %>
+          <%= f.radio_button :is_deleted, 'true' %>
+          <%= f.label :is_deleted, "退会", value: true %>
         </div>
         <div class="action">
           <%= f.submit "変更を保存", class: "btn btn-success" %>
