--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,16 +1,18 @@
 <div class="container">
 
-  <div class="row">
-    <div class="col">
+  <div class="row mt-3">
+    <div class="col-lg-10">
       <h2>商品一覧</h2>
     </div>
-    <div class="col">
-      <%= link_to "+", new_admin_item_path %>
+    <div>
+      <%= link_to new_admin_item_path, class: "col-lg-1 offset-lg-8" do %>
+        <h3><i class="fas fa-plus-circle"></i></h3>
+    <% end %>
     </div>
   </div>
 
-  <table>
-    <thead>
+  <table class="table table-borderless mt-2">
+    <thead class="table-secondary">
       <tr>
         <th>商品ID</th>
         <th>商品名</th>
@@ -28,9 +30,9 @@
         <td><%= item.genre.name %></td>
         <td>
           <% if item.is_active == true %>
-            販売中
+            <div class="text-success">販売中</div>
           <% else %>
-            販売停止中
+            <div class="text-secondary">販売停止中</div>
           <% end %>
         </td>
       </tr>
