--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,15 +1,16 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
+  <div class="row mt-3">
+    <div class="col-lg-3 offset-lg-1">
       <h2>商品詳細</h2>
     </div>
   </div>
-  <div class="row">
-    <div class="col">
+  <div class="row mt-5 offset-lg-1">
+    <div class="col-md-3">
       <%= image_tag @item.image, size: "300x200" %>
     </div>
-    <div class="col">
-      <table>
+
+    <div class="col-lg-5 offset-lg-2">
+      <table class="table table-borderless mt-2">
         <tr>
           <td>商品名</td>
           <td><%= @item.name %></td>
