--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -5,28 +5,22 @@
     　　<tr>
           <th>商品名</th>
           <th>単価(税込)</th>
+          <th>数量</th>
           <th>小計</th>
-          <th colspan="3"></th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
         <% @items.each do |item| %>
           <tr>
-          <td>
-            <%= link_to user_path(book.user_id) do %>
-              <%= item.name>
-              <%= image_tag item.user.get_profile_image(100,100) %>
-            <% end %>
-          </td>
-          <td>
-            <%= link_to book.title, book_path(book.id) %>
-          </td>
-          <td>
-            <%= book.body%>
-          </td>
+          <td><%= link_to item.name, admin_item_path(item.id) %></td>
+        　<td><%= item.price %></td>
+          
           </tr>
         <% end %>
       </tbody>
+      <tr>合計</th>
+      ¥<%= @total.round.to_s(:delimited)%>
       </table>
-¥<%= @total.round.to_s(:delimited)%>
+
 
