--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -5,9 +5,7 @@
       <h2>商品一覧</h2>
     </div>
     <div>
-      <%= link_to new_admin_item_path, class: "col-lg-1 offset-lg-8" do %>
-        <h3><i class="fas fa-plus-circle"></i></h3>
-    <% end %>
+      <%= link_to "+", new_admin_item_path, class: "btn btn-secondary rounded-circle" %>
     </div>
   </div>
 
