--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,22 +1,22 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      
-      <!--% if @customer.errors.any? %>-->
-      <!--  %= @customer.errors.count %>件のエラーが発生しました-->
-      <!--  <ul>-->
-      <!--    % @customer.errors.full_messages.each do |message| %>-->
-      <!--      <li>%= message %></li>-->
-      <!--    % end %>-->
-      <!--  </ul>-->
-      <!--% end %>-->
 
-      <!--<h2>%= @customer.name %>さんの会員情報編集</h2>-->
+      <% if @customer.errors.any? %>
+        <%= @customer.errors.count %>件のエラーが発生しました
+        <ul>
+          <% @customer.errors.full_messages.each do |message| %>
+            <li>%= message %></li>
+          <% end %>
+        </ul>
+      <% end %>
+
+      <h2><%= @customer.last_name+@customer.first_name %>さんの会員情報編集</h2>
       <div class="form-group">
-        <%= form_with model: @customer do |f| %>
+        <%= form_with model: @customer, url:admin_customer_path, method: :patch do |f| %>
         <div class="field">
           <%= f.label :customer_id, "会員ID" %>
-          <!--%= @customer.id %>-->
+          <%= @customer.id %>
         </div>
         <div class="field">
           <%= f.label :name, "氏名" %>
