--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -2,26 +2,31 @@
   <div class="row">
     <div class="col">
     <h2>会員一覧</h2>
-    <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+    <%= link_to "確認用ログアウト", destroy_admin_session_path, method: :delete %>
     <div>
-      <table class="table table-borderd">
+      <table class="table">
         <thead>
           <tr>
             <th>会員ID</th>
             <th colspan="3">氏名</th>
             <th colspan="3">メールアドレス</th>
-            <th>ステータス</th>
+            <th colspan="3">ステータス</th>
           </tr>
         </thead>
         <% @customers.each do |customer| %>
         <tbody>
           <tr>
             <td><%= customer.id %></td>
-            <td><%= customer.name %></td>
-            <td><%= customer.eamil %></td>
-            <td><%= customer.is_deleted %></td>
+            <td colspan="3">
+              <%= link_to admin_customer_path(customer) do %>
+              <%= customer.last_name+customer.first_name %>
+              <% end %>
+            </td>
+            <td colspan="3"><%= customer.email %></td>
+            <td colspan="3"><%= customer.is_deleted %></td>
           </tr>
         </tbody>
+        <% end %>
       </table>
     </div>
     </div>
