--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -9,18 +9,38 @@
           <th>小計</th>
           <th></th>
         </tr>
-      </thead>
-      <tbody>
-        <% @items.each do |item| %>
-          <tr>
-          <td><%= link_to item.name, admin_item_path(item.id) %></td>
-        　<td><%= item.price %></td>
-          
-          </tr>
-        <% end %>
-      </tbody>
-      <tr>合計</th>
-      ¥<%= @total.round.to_s(:delimited)%>
-      </table>
+        <%total = 0 %> #合計金額totalの初期化
 
-
+ <% if current_customer.cart_items.present? %> #カート内に商品があった場合
+    <% @cart_items.each do |cart_item| %> 
+     <tr>
+       <td>
+         <%= attachment_image_tag(cart_item.item, :image, size: "60x50", fallback: "no_image.jpg") %> #商品画像
+         <%= cart_item.item.name %> #商品名
+       </td>
+       <td><%= (cart_item.item.price*1.08).to_i %></td>　#商品単価(価格×1.08)
+       <td>
+         <%= form_with model: cart_item, url: cart_item_path(cart_item), local: true, method: :patch do |f| %>
+           <%= f.number_field :quantity, min: 1, max:10, id: "quantity_cart"%>
+           <%= f.submit "変更",class: "btn btn-success" %> #セレクトboxで数量変更
+         <% end %>
+       </td>
+       <td>
+         <% subtotal = ((cart_item.item.price*cart_item.quantity)*1.08).to_i %>　#小計を計算する
+         <%= subtotal %> #小計を表示
+       </td>
+       <td>
+         <%= link_to "商品をカートから削除する", cart_item_path(cart_item.id, cart_item), method: :delete,class: "btn btn-danger" %>
+       </td>
+     </tr>
+       <% total += subtotal %>　#アイテムごとに合計金額totalに反映 計算しておく
+     <% end %>
+<% end %>
+   <tr>    
+    <th>合計金額</th>
+    <td><%= total %></td>
+   </tr>
+  </thead>
+  </table>
+        
+        
