--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -36,9 +36,10 @@
 
       <div class="mb-8">
         <% if @item.is_active == true %>
-          <%= form_with model: @cart_item, data: { turbo: false } do |f| %>
-          <%= f.hidden_field :item_id, :value => @item.id %>
-          <%= f.select :quantity, *[1..50]  %>
+          <%= form_with(model: @cart_item,url: cart_items_path, method: :post,local: true)do |f| %>
+           <%= f.hidden_field :item_id, :value => @item.id %>
+            <%= f.label :quantity, "個数選択" %>
+            <%= f.select :quantity, *[1..50]  %>
           <%= f.submit "Add to Cart", class:"w-full cursor-pointer focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2" %>
           <% end %>
         <% end %>
