--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,34 +1,33 @@
 <div class="container">
   <div class="row">
-    <div class="col">
-    <h2>会員一覧</h2>
-    <%= link_to "確認用ログアウト", destroy_admin_session_path, method: :delete %>
-    <div>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>会員ID</th>
-            <th colspan="3">氏名</th>
-            <th colspan="3">メールアドレス</th>
-            <th colspan="3">ステータス</th>
-          </tr>
-        </thead>
-        <% @customers.each do |customer| %>
-        <tbody>
-          <tr>
-            <td><%= customer.id %></td>
-            <td colspan="3">
-              <%= link_to admin_customer_path(customer) do %>
-              <%= customer.last_name+customer.first_name %>
-              <% end %>
-            </td>
-            <td colspan="3"><%= customer.email %></td>
-            <td colspan="3"><%= customer.is_deleted %></td>
-          </tr>
-        </tbody>
-        <% end %>
-      </table>
-    </div>
+    <div class="col-md-10 col-md-offset-1">
+      <h2>会員一覧</h2>
+      <div>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>会員ID</th>
+              <th>氏名</th>
+              <th>メールアドレス</th>
+              <th>ステータス</th>
+            </tr>
+          </thead>
+          <% @customers.each do |customer| %>
+          <tbody>
+            <tr>
+              <td><%= customer.id %></td>
+              <td>
+                <%= link_to admin_customer_path(customer) do %>
+                <%= customer.last_name + customer.first_name %>
+                <% end %>
+              </td>
+              <td><%= customer.email %></td>
+              <td><%= customer.is_deleted ? "退会" : "有効" %></td>
+            </tr>
+          </tbody>
+          <% end %>
+        </table>
+      </div>
     </div>
   </div>
 </div>
