--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
-      <h2>ジャンル編集</h2>
+  <div class="row mt-3">
+    <div class="col-lg-3 offset-lg-1">
+      <h4>ジャンル編集</h4>
     </div>
   </div>
 
@@ -15,8 +15,8 @@
   <% end %>
 
   <%= form_with model: @genre, url:admin_genre_path do |f| %>
-  <div class="row">
-    <div class="col">
+  <div class="row-10">
+    <div class="col-10 mt-5">
       <%= f.label :name, "ジャンル" %>
       <%= f.text_field :name %>
       <%= f.submit "変更を保存", class: "btn btn-success" %>
