--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
-      <h2>ジャンル一覧・追加</h2>
+  <div class="row mt-3">
+    <div class="col-lg-3 offset-lg-1">
+      <h4>ジャンル一覧・追加</h4>
     </div>
   </div>
 
@@ -14,9 +14,9 @@
   </ul>
   <% end %>
 
-  <%= form_with model: @genre, url: admin_genres_path do |f| %>
-  <div class="row">
-    <div class="col">
+  <div class="row-10">
+    <div class="col-10 mt-5 mb-5">
+      <%= form_with model: @genre, url: admin_genres_path do |f| %>
       <%= f.label :name, "ジャンル名" %>
       <%= f.text_field :name, placeholder: "ジャンル名" %>
       <%= f.submit "新規登録", class: "btn btn-success" %>
@@ -25,8 +25,8 @@
   <% end %>
 
   <div class="row">
-    <div class="col">
-      <table>
+    <div class="col-4">
+      <table class="table mt-2">
         <thead>
           <tr>
             <th>ジャンル</th>
