--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,2 +1,40 @@
-<h1>Admin::Customers#edit</h1>
-<p>Find me in app/views/admin/customers/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h3>会員情報編集</h3>
+      <%= render 'layouts/errors', obj: @customer %>
+      <%= form_with model: @customer, url: update_current_customer_customers_path do |f| %>
+        <div class="form-group">
+          <%= f.label :"氏名" %>
+          <%= f.text_field :last_name %>
+          <%= f.text_field :first_name %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"フリガナ" %>
+          <%= f.text_field :kana_last_name %>
+          <%= f.text_field :kana_first_name %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"郵便番号" %>
+          <%= f.text_field :post_code %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"住所" %>
+          <%= f.text_field :address %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"電話番号" %>
+          <%= f.text_field :telephone_number %>
+        </div>
+        <div class="form-group">
+          <%= f.label :"メールアドレス" %>
+          <%= f.text_field :email %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "編集内容を保存", class:'btn btn-success' %>
+          <%= link_to "退会する", confirm_current_customer_customers_path, class:"btn btn-danger" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
