--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -8,7 +8,7 @@
   </ul>
 <% end %>
 
-<%= form_with model: @addess do |f| %>
+<%= form_with model: @address do |f| %>
   <h4>郵便番号</h4>
   <%= f.text_field :post_code %>
 	
@@ -48,6 +48,8 @@
           <td>
             <%= address.name %>
           </td>
+          <%= link_to "編集する", edit_address_path(address.id), class: "btn btn-success" %>
+          <%= link_to "削除する", destroy_address_path(address.id), class: "btn btn-success", method: :delete,"data-confirm" => "本当に削除しますか？" %>
           </tr>
         <% end %>
       </tbody>
