[add]_headear admin

--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -5,12 +5,12 @@
       <h2>商品一覧</h2>
     </div>
     <div>
-      <%= link_to "+", new_admin_item_path, class: "btn btn-secondary rounded-circle" %>
+      <%= link_to "+", new_admin_item_path, class: "btn btn-green rounded-circle" %>
     </div>
   </div>
 
   <table class="table table-borderless mt-2">
-    <thead class="table-secondary">
+    <thead class="table-green">
       <tr>
         <th>商品ID</th>
         <th>商品名</th>
