--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -52,7 +52,7 @@
                 <% end %>
               </li>
               <li class="nav-item">
-                <%= link_to admin_gemres_path, class: 'nav-link btn btn-sm btn-green mr-3' do %>
+                <%= link_to admin_genres_path, class: 'nav-link btn btn-sm btn-green mr-3' do %>
                 <i class="fas fa-utensils"></i>ジャンル一覧
                 <% end %>
               </li>
