--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,38 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col">
+    <div class="col-3">
+      <div class="pt-5 pl-5">
+        <nav class="nav flex-column bg-green" style="width: 200px;">
+          <a>ケーキ</a>
+          <a>焼き菓子</a>
+          <a>プリン</a>
+          <a>キャンディ</a>
+        </nav>
+      </div>
+    </div>
+    <div class="col-9">
       <%= flash[:notice] %>
+      <div class="outer position-relative">
+        <%= image_tag  "e0714_1.png", size: '900x560' %>
+        <p class="position-absolute heading">
+          <strong>ようこそ、ながのCAKEへ！</strong><br>
+          このサイトは、ケーキ販売のECサイトになります。<br>
+          会員でない方も商品の閲覧はできますが、<br>
+          購入には会員登録が必要になります。
+        </p>
+      </div>
+      <div class="outer">
+        <h3>新着商品</h3>
+        <div class="box display-flex mt-1 mb-1">
+          <% @items.each do |item| %>
+            <div class="item-box">
+              <%= image_tag item.image, size: '130px100'%>
+              <p><%= item.name %></p>
+              <p>￥<%= item.price %></p>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
