--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Public::Addresses#index</h1>
+<h1>配送先登録／一覧</h1>
 <% if @address.errors.any? %>
   <%= @address.errors.count %>件のエラーが発生しました
   <ul>
@@ -11,13 +11,13 @@
 <%= form_with model: @address do |f| %>
   <h4>郵便番号</h4>
   <%= f.text_field :post_code %>
-	
+
   <h4>配送先住所</h4>
   <%= f.text_area :address %>
-  
+
   <h4>宛名</h4>
   <%= f.text_area :name %>
-	
+
   <%= f.submit '配送先登録' %>
 <% end %>
 
@@ -28,8 +28,8 @@
       <h2>配送先一覧</h2>
       <table class="table table-hover table-inverse">
       <thead>
-    　　<tr>
-    　　    <th></th>
+        <tr>
+          <th></th>
           <th>郵便番号</th>
           <th>住所</th>
           <th>宛名</th>
@@ -49,8 +49,8 @@
             <%= address.name %>
           </td>
           <%= link_to "編集する", edit_address_path(address.id), class: "btn btn-success" %>
-          <%= link_to "削除する", destroy_address_path(address.id), class: "btn btn-success", method: :delete,"data-confirm" => "本当に削除しますか？" %>
+          <%= link_to "削除する", address_path(address.id), class: "btn btn-success", method: :delete,"data-confirm" => "本当に削除しますか？" %>
           </tr>
         <% end %>
       </tbody>
-     
+
