--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -2,7 +2,9 @@
 <h2>ショッピングカート</h2>
       <table class="table table-hover table-inverse">
       <thead>
-    　　<tr>
+       <td><%= link_to "カートを空にする", destroy_all_cart_items_path, method: :delete,"data-confirm" => "本当に空にしますか？" %><br>
+       </td>
+      <tr>
           <th>商品名</th>
           <th>単価(税込)</th>
           <th>数量</th>
@@ -12,10 +14,9 @@
         <%total = 0 %>
 
  <% if current_customer.cart_items.present? %>
-    <% @cart_items.each do |cart_item| %> 
+    <% @cart_items.each do |cart_item| %>
      <tr>
        <td>
-         
          <%= cart_item.item.name %> #商品名
        </td>
        <td><%= (cart_item.item.price*1.08).to_i %></td>
@@ -26,21 +27,19 @@
          <% end %>
        </td>
        <td>
-         <% subtotal = ((cart_item.item.price*cart_item.quantity)*1.08).to_i %>　#小計を計算する
+         <% subtotal = ((cart_item.item.price*cart_item.quantity)*1.08).to_i %>
          <%= subtotal %> #小計を表示
        </td>
        <td>
          <%= link_to "商品をカートから削除する", cart_item_path(cart_item.id, cart_item), method: :delete,class: "btn btn-danger" %>
        </td>
      </tr>
-       <% total += subtotal %>　#アイテムごとに合計金額totalに反映 計算しておく
-     <% end %>
+       <% total += subtotal %>
+    <% end %>
 <% end %>
-   <tr>    
     <th>合計金額</th>
     <td><%= total %></td>
-   </tr>
   </thead>
   </table>
-        
-        
+  <td><%= link_to "買い物を続ける", items_path %></td>
+  <td><%= link_to "情報入力に進む", new_order_path,class: "btn btn-success" %>
