--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -20,11 +20,11 @@
           <td><%= @item.introduction %></td>
         </tr>
         <tr>
-          <td>税込価格</br>（税抜価格）</td>
+          <td class="text-nowrap" >税込価格</br>（税抜価格）</td>
           <td><%= (@item.price*1.1).floor %>(<%= @item.price %>) 円</td>
         </tr>
         <tr>
-          <td>販売ステータス</td>
+          <td class="text-nowrap" >販売ステータス</td>
           <td>
             <% if @item.is_active == true %>
               販売中
