--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -11,7 +11,7 @@
         </ul>
       <% end %>
 
-      <h2><%= @customer.last_name + @customer.first_name %>さんの会員情報編集</h2>
+      <h2 class="mt-4"><%= @customer.last_name + @customer.first_name %>さんの会員情報編集</h2>
       <div class="form-group">
         <%= form_with model: @customer, url:admin_customer_path, method: :patch do |f| %>
         <div class="field">
