--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,23 +1,24 @@
 <div class="container">
   <div class="row">
-    <div class="col">
-      <h2><%= @customer.last_name+@customer.first_name %>さんの会員詳細</h2>
+    <div class="col-md-10">
+      <h2 class="mt-4"><%= @customer.last_name+@customer.first_name %>さんの会員詳細</h2>
       <div>
-        <table class="table">
+        <table class="table mt-4">
           <thead></thead>
           <tbody>
             <tr>
-              <th>会員ID</th>
-              <td><%= @customer.id %></td>
+              <th class="col-md-2 offset-md-1">会員ID</th>
+              <td class="col-md-8"><%= @customer.id %></td>
             </tr>
             <tr>
-              <th>氏名</th><td><%= @customer.last_name %></td>
-              <td><%= @customer.first_name %></td>
+              <th>氏名</th>
+              <td><%= @customer.last_name %>&nbsp;&nbsp;&nbsp;&nbsp;<%= @customer.first_name %></td>
+              <td></td>
             </tr>
             <tr>
               <th>フリガナ</th>
-              <td><%= @customer.kana_last_name %></td>
-              <td><%= @customer.kana_first_name %></td>
+              <td><%= @customer.kana_last_name %>&nbsp;&nbsp;&nbsp;&nbsp;<%= @customer.kana_first_name %></td>
+              <td></td>
             </tr>
             <tr>
               <th>郵便番号</th>
@@ -37,16 +38,23 @@
             </tr>
             <tr>
               <th>会員ステータス</th>
-              <td><%= @customer.is_deleted ? '退会' : '有効' %></td>
-            </tr>
-            <tr>
-              <td><%= link_to "編集する", edit_admin_customer_path, class: "btn btn-success" %></td>
-              <td>注文履歴一覧を見る</td>
+              <td>
+                <% if @customer.is_deleted == true %>
+                  <div class="font-weight-bold text-secondary">退会</div>
+                <% else %>
+                  <div class="font-weight-bold text-success">有効</div>
+                <% end %>
+              </td>
             </tr>
           </tbody>
         </table>
       </div>
     </div>
   </div>
+    <div class="row">
+      <div class="col-md-2 offset-md-2"><%= link_to "編集する", edit_admin_customer_path, class: "btn btn-success" %></div>
+      <div class="col-md-3"><%= link_to "注文履歴一覧を見る", admin_root_path, class: "btn btn-primary" %></div>
+          
+    </div>
 </div>
 
