--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -14,24 +14,27 @@
       <%= flash[:notice] %>
       <div class="outer position-relative">
         <%= image_tag  "e0714_1.png", size: '900x560' %>
-        <p class="position-absolute heading">
-          <strong>ようこそ、ながのCAKEへ！</strong><br>
-          このサイトは、ケーキ販売のECサイトになります。<br>
+        <div class="position-absolute heading">
+          <h3>ようこそ、ながのCAKEへ！</h3><br>
+          <strong>このサイトは、ケーキ販売のECサイトになります。<br>
           会員でない方も商品の閲覧はできますが、<br>
-          購入には会員登録が必要になります。
-        </p>
+          購入には会員登録が必要になります。</strong>
+        </div>
       </div>
       <div class="outer">
         <h3>新着商品</h3>
-        <div class="box display-flex mt-1 mb-1">
+        <div class="box d-flex flex-row mt-1 mb-1">
           <% @items.each do |item| %>
-            <div class="item-box">
-              <%= image_tag item.image, size: '130px100'%>
-              <p><%= item.name %></p>
-              <p>￥<%= item.price %></p>
+            <div class="item-box pr-2 pt-1" style="width: 300px; heading: 250px">
+              <%= image_tag item.image, class: "rounded-circle shadow", size: '200x150'%>
+              <p class="mt-3 mb-0" > <%= item.name %></p>
+              <p>￥<%= item.price %>(税抜)</p>
             </div>
           <% end %>
         </div>
+      </div>
+      <div class="d-flex flex-row-reverse mb-4 mr-5">
+        <strong><%= link_to "→全ての商品を見る", items_path , class: "mr-5"%></strong>
       </div>
     </div>
   </div>
