--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -6,8 +6,8 @@
   </div>
 
   <div class="row mt-2">
-    <table class="table table-green table-borderless table-striped">
-      <thead>
+    <table class="table table-hover table-borderless">
+      <thead class="table-green">
         <tr>
           <th>購入日時</th>
           <th>購入者</th>
@@ -19,8 +19,8 @@
         <% @orders.each do |order| %>
         <tr>
           <td>
-            <%= link_to admin_oder_path(order.id) do %>
-              <%= order.created_at_strftime('%Y/%m/%d') %>
+            <%= link_to admin_order_path(order.id) do %>
+              <%= order.created_at.strftime('%Y/%m/%d') %>
             <% end %>
           </td>
           <td><%= order.customer.last_name %> <%= order.customer.first_name %></td>
@@ -30,6 +30,8 @@
         <% end %>
       </tbody>
     </table>
-    <%= paginate @orders %>
+    <div class="row mx-auto">
+      <%= paginate @orders %>
+    </div>
   </div>
 </div>
