--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,21 +1,21 @@
 <div class="container" >
-  <div class="row">
+  <div class="row mt-2">
     <h2>注文履歴詳細</h2>
   </div>
   <div class="row">
     <table class="table table-borderless mt-2">
       <tr>
         <td>購入者</td>
-        <td><%= @order.customer.last_name %> <%= @order.customer.first_name %></td>
+        <td><%= @order.customer.last_name %><%= @order.customer.first_name %></td>
       </tr>
       <tr>
         <td>注文日</td>
-        <td><%= @order.created_at_strftime('%Y/%m/%d') %></td>
+        <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
       </tr>
       <tr>
         <td>配送先</td>
         <td>
-          〒<%= @order.post_code %> <%= @order.adress %></br>
+          〒<%= @order.post_code %> <%= @order.address %></br>
           <%= @order.name %>
         </td>
       </tr>
@@ -36,10 +36,10 @@
   </div>
   <div class="row">
     <div class="col">
-      <table class="table border-top border-bottom">
+      <table class="table table-borderless">
         <thead class="table-green">
-          <tr>
-            <th>商品名</th>
+          <tr class="text-nowrap">
+            <th >商品名</th>
             <th>単価（税込）</th>
             <th>数量</th>
             <th>小計</th>
@@ -49,13 +49,13 @@
         </thead>
         <tbody>
           <% @order.ordered_items.each do |ordered_item| %>
-          <tr>
+          <tr class="text-nowrap">
             <td><%= ordered_item.item.name %></td>
-            <td><%= (ordered_item.item.price*1.1).floor %></td>
+            <td><%= (ordered_item.item.price*1.08).floor %></td>
             <td><%= ordered_item.quantity %></td>
-            <td><%= (ordered_item.quantity*(ordered_item.item.price*1.1)).floor %></td>
+            <td><%= (ordered_item.quantity*(ordered_item.item.price*1.08)).floor %></td>
             <td>
-              <%= form_with model:ordered_item, url:admin_order_item_path(ordered_item) do |f| %>
+              <%= form_with model:ordered_item, url:admin_ordered_item_path(ordered_item) do |f| %>
               <%= f.select :make_status,  OrderedItem.make_statuses.keys.map {|k| [I18n.t("enums.ordered_item.make_status.#{k}"), k]} %>
             </td>
             <td>
@@ -67,19 +67,19 @@
         </tbody>
       </table>
     </div>
-    <div class="col">
-      <table>
+    <div class="col-4 mb-3 align-self-end">
+      <table class="table table-borderless">
         <tr>
-          <td>商品合計</td>
-          <td><%= (@order.total_price - @order.postage).floor %></td>
+          <th>商品合計</th>
+          <td class="text-right"><%= (@order.total_price - @order.postage).to_s%> 円</td>
         </tr>
         <tr>
-          <td>送料</td>
-          <td><%= @order.postage %></td>
+          <th>送料</th>
+          <td class="text-right"><%= @order.postage %> 円</td>
         </tr>
         <tr>
-          <td>請求金額合計</td>
-          <td><%= @order.total_price %></td>
+          <th>請求金額合計</th>
+          <td class="text-right font-weight-bold"><%= @order.total_price %> 円</td>
         </tr>
       </table>
     </div>
