--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,2 +1,19 @@
-<h1>Public::Homes#about</h1>
-<p>Find me in app/views/public/homes/about.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="outer">
+        <div class="about-text">
+          <h1 class="text-center m-5" style="border-bottom: 3px dashed #78420e;">About</h1>
+          <p class="text-center">
+            ながのCAKEは全国発送可能なケーキ屋さんです。<br>
+            お子様から年寄りの方までお召し上がりいただけるよう、<br>
+            様々なバリエーションをご用意しております。<br>
+            また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+            ぜひご注文下さい。
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<%= image_tag  "3708631_s.jpg", size: '1000x650', style: "margin: 50px 0 100px 438px;", class: "rounded-circle border border-brown" %>
