--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -26,7 +26,7 @@
         <div class="box d-flex flex-row mt-1 mb-1">
           <% @items.each do |item| %>
             <div class="item-box pr-2 pt-1" style="width: 300px; heading: 250px">
-              <%= image_tag item.image, class: "rounded-circle shadow", size: '200x150'%>
+              <%= image_tag item.image, class: "rounded-circle shadow border border-brown", size: '200x150'%>
               <p class="mt-3 mb-0" > <%= item.name %></p>
               <p>￥<%= item.price %>(税抜)</p>
             </div>
