--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div style="margin-bottom: 50px; border-bottom: 3px double #78420e;"></div>
+<div class="mt-5 mb-5" style="border-bottom: 3px double #78420e;"></div>
 <footer class="bg-brown">
   <div class="container p-5">
     <div class="row">
