--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,3 +1,4 @@
+ <%= render 'layouts/flash' %>
 <div class="container-fluid">
   <div class="row">
     <div class="col-3">
@@ -11,7 +12,6 @@
       </div>
     </div>
     <div class="col-9">
-      <%= flash[:notice] %>
       <div class="outer position-relative">
         <%= image_tag  "e0714_1.png", size: '900x560' %>
         <div class="position-absolute heading">
