--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -3,10 +3,10 @@
     <div class="col">
       <h2>新規会員登録</h2>
       <%= form_with model: @customer, url: customer_registration_path do |f| %>
-      <%= render "public/shared/error_messages", resource: resource %>
+      <%= render "layouts/errors", obj: @customer %>
         <div class="field">
           <%= f.label :"名前" %>
-          <>(姓)</p>
+          <p>(姓)</p>
           <%= f.text_field :last_name, autofocus: true %>
           <p>(名)</p>
           <%= f.text_field :first_name %>
