--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |key, value| %>
-   <h2 class="alert alert-info notice-<%= key %>">
+   <h4 class="alert alert-notice">
      <%= value %>
-   </h2>
+   </h4>
 <% end %>
