--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="d-flex flex-row-reverse mb-4 mr-5">
-        <strong><%= link_to "→全ての商品を見る", items_path , class: "mr-5"%></strong>
+        <strong><%= link_to "→全ての商品を見る", items_path , class: "mr-5 underline"%></strong>
       </div>
     </div>
   </div>
