--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,58 +1,72 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h2>新規会員登録</h2>
-      <%= form_with model: @customer, url: customer_registration_path do |f| %>
+      <h1 class="m-4">新規会員登録</h1>
       <%= render "layouts/errors", obj: @customer %>
-        <div class="field">
-          <%= f.label :"名前" %>
-          <p>(姓)</p>
-          <%= f.text_field :last_name, autofocus: true %>
-          <p>(名)</p>
-          <%= f.text_field :first_name %>
+      <%= form_with model: @customer, url: customer_registration_path do |f| %>
+        <div class="form-group row">
+          <%= f.label :"名前", class:"col-sm-2 col-form-label" %>
+          <p class="mr-1" style="margin-left: 66px;">(姓)</p>
+          <%= f.text_field:last_name, autofocus: true, class:"form-control" %>
+          <p class="mr-1" style="margin-left: 25px;">(名)</p>
+          <%= f.text_field:first_name, class:"form-control" %>
         </div>
 
-        <div class="field">
-          <%= f.label :"フリガナ" %><br>
-          <%= f.text_field :kana_last_name %>
-          <%= f.text_field :kana_first_name %>
+        <div class="form-group row">
+          <%= f.label :"フリガナ" ,class:"col-sm-2 col-form-label"%>
+          <p class="mr-1" style="margin-left: 47px;">(セイ)</p>
+          <%= f.text_field:kana_last_name, class:"form-control" %>
+          <p class="mr-1 ml-1">(メイ)</p>
+          <%= f.text_field:kana_first_name, class:"form-control" %>
         </div>
 
-        <div class="field">
-          <%= f.label :"メールアドレス" %><br>
-          <%= f.email_field :email, autocomplete: "email" %>
+        <div class="form-group row">
+          <%= f.label :"メールアドレス",class:"col-sm-3 col-form-label" %>
+          <div class="col-sm-9">
+            <%= f.email_field :email, autocomplete: "email", class:"form-control" %>
+          </div>
         </div>
 
-        <div class="field">
-          <%= f.label :"郵便番号(ハイフンなし)" %><br>
-          <%= f.text_field :post_code %>
+        <div class="form-group row">
+          <%= f.label :"郵便番号(ハイフンなし)",class:"col-sm-3 col-form-label" %>
+          <div class="col-sm-9">
+            <%= f.text_field:post_code, class:"form-control" %>
+          </div>
         </div>
 
-        <div class="field">
-          <%= f.label :"住所" %><br>
-          <%= f.text_field :address %>
+        <div class="form-group row">
+          <%= f.label :"住所",class:"col-sm-3 col-form-label" %>
+          <div class="col-sm-9">
+            <%= f.text_field:address, class:"form-control", style: "width:80%;" %>
+          </div>
         </div>
 
-        <div class="field">
-          <%= f.label :"電話番号(ハイフンなし）" %><br>
-          <%= f.text_field :telephone_number %>
+        <div class="form-group row">
+          <%= f.label :"電話番号(ハイフンなし）",class:"col-sm-3 col-form-label" %>
+          <div class="col-sm-9">
+            <%= f.text_field:telephone_number, class:"form-control" %>
+          </div>
         </div>
 
-        <div class="field">
-          <%= f.label :"パスワード(６文字以上)" %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br>
-          <%= f.password_field :password, autocomplete: "new-password" %>
+        <div class="form-group row">
+          <%= f.label :"パスワード(６文字以上)",class:"col-sm-3 col-form-label" %>
+          <div class="col-sm-9">
+            <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
+          </div>
         </div>
 
-        <div class="field">
-          <%= f.label :"パスワード(確認用)" %><br>
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        <div class="form-group row">
+          <%= f.label :"パスワード(確認用)",class:"col-sm-3 col-form-label" %>
+          <div class="col-sm-9">
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control" %>
+          </div>
         </div>
 
-        <div class="actions">
-          <%= f.submit "新規登録", class:"btn btn-green" %>
+        <div class="form-group row">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-9">
+            <%= f.submit "新規登録", class:"btn btn-green mb-3 mt-3", style:"width: 60%;" %>
+          </div>
         </div>
       <% end %>
 
