--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,38 +1,62 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h3>会員情報編集</h3>
+      <h3 class="mt-4 mb-3">会員情報編集</h3>
       <%= render 'layouts/errors', obj: @customer %>
       <%= form_with model: @customer, url: update_current_customer_customers_path do |f| %>
-        <div class="form-group">
-          <%= f.label :"氏名" %>
-          <%= f.text_field :last_name %>
-          <%= f.text_field :first_name %>
+        <div class="form-group row">
+          <%= f.label :"名前", class:"col-sm-3 col-form-label" %>
+          <div class="col-sm-3">
+            <%= f.text_field:last_name, autofocus: true, class:"form-control", style:"width: 210px;" %>
+          </div>
+          <div class="col-sm-4">
+            <%= f.text_field:first_name, class:"form-control", style:"width: 210px;" %>
+          </div>
         </div>
-        <div class="form-group">
-          <%= f.label :"フリガナ" %>
-          <%= f.text_field :kana_last_name %>
-          <%= f.text_field :kana_first_name %>
+
+        <div class="form-group row">
+          <%= f.label :"フリガナ" ,class:"col-sm-3 col-form-label"%>
+          <div class="col-sm-3">
+            <%= f.text_field:kana_last_name, class:"form-control", style:"width: 210px;" %>
+          </div>
+          <div class="col-sm-4">
+            <%= f.text_field:kana_first_name, class:"form-control", style:"width: 210px;" %>
+          </div>
         </div>
-        <div class="form-group">
-          <%= f.label :"郵便番号" %>
-          <%= f.text_field :post_code %>
+
+        <div class="form-group row">
+          <%= f.label :"郵便番号(ハイフンなし)",class:"col-sm-3 col-form-label" %>
+          <div class="col-sm-9">
+            <%= f.text_field:post_code, class:"form-control" %>
+          </div>
         </div>
-        <div class="form-group">
-          <%= f.label :"住所" %>
-          <%= f.text_field :address %>
+
+        <div class="form-group row">
+          <%= f.label :"住所",class:"col-sm-3 col-form-label" %>
+          <div class="col-sm-9">
+            <%= f.text_field:address, class:"form-control", style: "width:80%;" %>
+          </div>
         </div>
-        <div class="form-group">
-          <%= f.label :"電話番号" %>
-          <%= f.text_field :telephone_number %>
+
+        <div class="form-group row">
+          <%= f.label :"電話番号(ハイフンなし）",class:"col-sm-3 col-form-label" %>
+          <div class="col-sm-9">
+            <%= f.text_field:telephone_number, class:"form-control" %>
+          </div>
         </div>
-        <div class="form-group">
-          <%= f.label :"メールアドレス" %>
-          <%= f.text_field :email %>
+        <div class="form-group row">
+          <%= f.label :"メールアドレス",class:"col-sm-3 col-form-label" %>
+          <div class="col-sm-9">
+            <%= f.email_field :email, autocomplete: "email", class:"form-control" %>
+          </div>
         </div>
-        <div class="form-group">
-          <%= f.submit "編集内容を保存", class:'btn btn-success' %>
-          <%= link_to "退会する", confirm_current_customer_customers_path, class:"btn btn-danger" %>
+
+        <div class="form-group row">
+          <div class="col-sm-3"></div>
+          <div class="col-sm-9">
+            <%= f.submit "新規登録", class:"btn btn-green mb-3 mt-3 mr-5", style:"width: 30%;" %>
+            <%= link_to "退会する", confirm_current_customer_customers_path, class:"btn btn-danger ml-5" %>
+          </div>
         </div>
       <% end %>
     </div>
