--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -5,7 +5,7 @@
     </h2>
     <ul>
       <% obj.errors.full_messages.each do |message| %>
-        <li><%= t(message) %></li>
+        <li><%= message %></li>
       <% end %>
     </ul>
   </div>
