--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |key, value| %>
-   <h4 class="alert alert-notice">
+   <h4 class="alert alert-info">
      <%= value %>
    </h4>
 <% end %>
