[updated]layout for Cart,Order,Address

--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -45,7 +45,9 @@
            <td><%= f.text_field :name %></td>
          </tr>
         </table>
-   <%= f.submit "確認画面へ進む" %>
+  <div class="row justify-content-center">        
+   <%= f.submit "確認画面へ進む",class: "btn btn-primary" %>
+  </div>
  <% end %>
        </div>
     </div>
