--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -24,16 +24,11 @@
   </div>
   <%= f.submit '新規登録', class: "btn btn-success" %>
 <% end %>
-
-<div class="container px-5 px-sm-0">
-  <div class="row">
-    <div class="col-md-3"></div>
+</div>
     <div class="col-md-8 offset-md-1">
-      <h2>配送先一覧</h2>
       <table class="table table-hover table-inverse">
       <thead>
         <tr>
-          <th></th>
           <th>郵便番号</th>
           <th>住所</th>
           <th>宛名</th>
@@ -52,9 +47,15 @@
           <td>
             <%= address.name %>
           </td>
+          <td>
           <%= link_to "編集する", edit_address_path(address.id), class: "btn btn-success" %>
+          </td>
+          <td>
           <%= link_to "削除する", address_path(address.id), class: "btn btn-danger", method: :delete,"data-confirm" => "本当に削除しますか？" %>
+          </td>
           </tr>
         <% end %>
       </tbody>
+      </table>
+    </div>
 
