--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,45 +1,69 @@
-<h1>Public::CartItems#index</h1>
-<h2>ショッピングカート</h2>
-      <table class="table table-hover table-inverse">
-      <thead>
-       <td><%= link_to "カートを空にする", destroy_all_cart_items_path, method: :delete,"data-confirm" => "本当に空にしますか？" %><br>
-       </td>
-      <tr>
-          <th>商品名</th>
-          <th>単価(税込)</th>
-          <th>数量</th>
-          <th>小計</th>
-          <th></th>
-        </tr>
+<div class= "container">
+    <div class='row'>
+      <div class='col-4'>
+        <h4>ショッピングカート</h4>
+      </div>
+      <div class='col-5'></div>
+      <div class= 'col-3'>
+         <%= link_to "カートを空にする", destroy_all_cart_items_path, method: :delete,class: "btn btn-danger","data-confirm" => "本当に空にしますか？" %>
+      </div>
+    </div>
+    <div class= "container">
+    <div class='row'>
+      <div class='col-10 offset-1'>
+        <table class='table table-border'>
+          <tr class="table-secondary">
+            <th>商品名</th>
+            <th>単価(税込)</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th><br></th>
+          </tr>
         <%total = 0 %>
-
- <% if current_customer.cart_items.present? %>
-    <% @cart_items.each do |cart_item| %>
-     <tr>
-       <td>
-         <%= cart_item.item.name %> #商品名
-       </td>
-       <td><%= (cart_item.item.price*1.08).to_i %></td>
-       <td>
-         <%= form_with model: cart_item, url: cart_item_path(cart_item), local: true, method: :patch do |f| %>
-           <%= f.number_field :quantity, min: 1, max:10, id: "quantity_cart"%>
-           <%= f.submit "変更",class: "btn btn-success" %> #セレクトboxで数量変更
-         <% end %>
-       </td>
-       <td>
-         <% subtotal = ((cart_item.item.price*cart_item.quantity)*1.08).to_i %>
-         <%= subtotal %> #小計を表示
-       </td>
-       <td>
-         <%= link_to "商品をカートから削除する", cart_item_path(cart_item.id, cart_item), method: :delete,class: "btn btn-danger" %>
-       </td>
-     </tr>
-       <% total += subtotal %>
-    <% end %>
-<% end %>
-    <th>合計金額</th>
-    <td><%= total %></td>
-  </thead>
-  </table>
-  <td><%= link_to "買い物を続ける", items_path %></td>
-  <td><%= link_to "情報入力に進む", new_order_path,class: "btn btn-success" %>
+        <% if current_customer.cart_items.present? %>
+        <% @cart_items.each do |cart_item| %>
+          <tr>
+            <td><%= image_tag cart_item.item.image, size: "150x100" %>
+            <%= cart_item.item.name %></td>
+            <td><%= (cart_item.item.price*1.08).to_i %></td>
+            <td>
+            <%= form_with model: cart_item, url: cart_item_path(cart_item), local: true, method: :patch do |f| %>
+            <%= f.number_field :quantity, min: 1, max:10, id: "quantity_cart"%>
+            <%= f.submit "変更",class: "btn btn-success" %>
+            <% end %>
+            </td>
+            <td>
+            <% subtotal = ((cart_item.item.price*cart_item.quantity)*1.08).to_i %>
+            <%= subtotal %>
+            </td>
+            <td>
+            <%= link_to "削除する", cart_item_path(cart_item.id, cart_item), method: :delete,class: "btn btn-danger" %>
+            </td>
+          </tr>
+            <% total += subtotal %>
+        <% end %>
+        <% end %>
+        </table>
+  <div class="row">
+    <div class= "col-4">
+       <tr>
+       <td><%= link_to "買い物を続ける", items_path,class: "btn btn-primary" %></td>
+       </tr>
+    </div>
+    <div class='col-5'></div>
+    <div class="col-3">
+      <table class='table table-border'>
+          <th>合計金額</th>
+          <tr>
+            <td><%= total %></td>
+          </tr>
+      </table>
+    </div>
+  </div>  
+  <div class="row justify-content-center">
+  <td><%= link_to "情報入力に進む", new_order_path,class: "btn btn-success" %></td>
+  </div>
+    </div>
+    </div>
+  </div>
+</div>
