--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -47,10 +47,10 @@
     <div class="row">
         <div class='col-11 offset-1'>
             <table class="table table-borderless">
-                <tr><th class="col-1">支払い方法</th><td class="col-10"><%= @order.payment %></td></tr>
+                <tr><th class="col-1">支払方法</th><td class="col-10"><%= @order.payment_i18n %></td></tr>
                 <tr><th class="col-1">お届け先</th><td class="col-10">
                 <%= @order.post_code %>
-                <%= @order.address %>
+                <%= @order.address %></br>
                 <%= @order.name %>
                 </td></tr>
             </table>
