--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -19,7 +19,7 @@
     <% @orders.each do |order| %>
     <tbody>
       <tr>
-        <td><%= order.created_at %></td>
+        <td><%= order.created_at.strftime("%Y-%m-%d") %></td>
         <td><%= order.address %></td>
         <td>
           <% order.ordered_items.each do |order_item| %>
@@ -27,7 +27,7 @@
           <% end %>
         </td>
         <td><%= order.total_price %></td>
-        <td><%= order.status %></td>
+        <td><%= order.status_i18n %></td>
         <td><%= link_to '表示する', order_path(order.id)%></td>
       </tr>
     </tbody>
