--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,21 +1,20 @@
 <h2>注文履歴詳細</h2>
 <h4>注文情報</h4>
- <div class='col-3'>
+ <div class='col-10'>
         <table class="table table-bordered border-dark">
-            <tr><th class="table-secondary">注文日</th><td><%= @order.created_at %></td></tr>
+            <tr><th class="table-secondary">注文日</th><td><%= @order.created_at.strftime("%Y-%m-%d") %></td></tr>
             <tr><th class="table-secondary">配送先</th>
              <td><%= @order.post_code %>
                 <%= @order.address %>
                 <%= @order.name %></td>
             </tr>
-            <tr><th class="table-secondary">支払方法</th><td><%= @order.payment %></td></tr>
-            <tr><th class="table-secondary">ステータス</th><td><%= @order.status %></td></tr>
+            <tr><th class="table-secondary">支払方法</th><td><%= @order.payment_i18n %></td></tr>
+            <tr><th class="table-secondary">ステータス</th><td><%= @order.status_i18n %></td></tr>
         </table>
   </div>
 <h4>注文内容</h4>
-  <div class="row">
   <div class="col-3">
-    <table class="table table-borderless">
+    <table class="table table-borded border-dark">
         <thead class="table-green">
           <tr class="text-nowrap">
             <th>商品</th>
@@ -37,13 +36,12 @@
   </table>
     </div>
   </div>
-</div>
   
   <h4>請求情報</h4>
 <div class='col-3'>
             <table class="table table-bordered border-dark">
                 <tr><th class="table-secondary">商品合計</th><td><%= (@order.total_price - @order.postage).to_s%> 円</td>
-                <tr><th class="table-secondary">配送料</th><td><%= @order.postage %></td></tr>
-                <tr><th class="table-secondary">ご請求額</th><td><%= @order.total_price %></td></tr>
+                <tr><th class="table-secondary">配送料</th><td><%= @order.postage %>円</td></tr>
+                <tr><th class="table-secondary">ご請求額</th><td><%= @order.total_price %>円</td></tr>
             </table>
   </div>
