--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -12,7 +12,7 @@
       <%= form_with model: @genre, url: admin_genres_path do |f| %>
       <%= f.label :name, "ジャンル名" %>
       <%= f.text_field :name, placeholder: "ジャンル名" %>
-      <%= f.submit "新規登録", class: "btn btn-success" %>
+      <%= f.submit "新規登録", class: "btn btn-green" %>
     </div>
   </div>
   <% end %>
@@ -30,7 +30,7 @@
           <% @genres.each do |genre| %>
           <tr>
             <td><%= genre.name %></td>
-            <td><%= link_to "編集する", edit_admin_genre_path(genre), class: "btn btn-success" %></td>
+            <td><%= link_to "編集する", edit_admin_genre_path(genre), class: "btn btn-green" %></td>
           </tr>
           <% end %>
         </tbody>
