--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -63,7 +63,7 @@
 
     <div class="row">
       <div class="col-5 mx-auto">
-        <%= f.submit "変更を保存", class:'btn btn-lg btn-success' %>
+        <%= f.submit "変更を保存", class:'btn btn-lg btn-green' %>
       </div>
     </div>
     <% end %>
