--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -49,7 +49,7 @@
     </table>
       <div class="row">
         <div class="col-5 mx-auto">
-          <%= f.submit "新規登録", class: "btn btn-lg btn-success" %>
+          <%= f.submit "新規登録", class: "btn btn-lg btn-green" %>
         </div>
       </div>
     <% end %>
