--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -37,7 +37,7 @@
 
       <div class="row">
         <div class="col mx-auto">
-          <%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-success" %>
+          <%= link_to "編集する", edit_admin_item_path(@item.id), class: "btn btn-green" %>
         </div>
       </div>
 
