[update]admin/login, error_message

--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,13 +1,6 @@
 <div class="container">
 
-  <% if @customer.errors.any? %>
-    <%= @customer.errors.count %>件のエラーが発生しました
-    <ul>
-      <% @customer.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  <% end %>
+  <%= render 'layouts/errors', obj: @customer %>
 
   <h2 class="mt-4"><%= @customer.last_name + @customer.first_name %>さんの会員情報編集</h2>
   <div class="form-group mt-5">
