--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -47,7 +47,7 @@
   <div class="row">
     <div class= "col-4">
        <tr>
-       <td><%= link_to "買い物を続ける", items_path,class: "btn btn-primary" %></td>
+       <td><%= link_to "買い物を続ける", items_path,class: "btn btn-in" %></td>
        </tr>
     </div>
     <div class='col-5'></div>
