--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,6 +1,6 @@
 <div class= "container">
     <div class='row'>
-      <div class='col-4'>
+      <div>
         <h4>商品一覧</h4>
 　　　</div>
 <div class='list-wrap'>
@@ -9,12 +9,14 @@
         <%= image_tag item.image, size:"200x200", class: "p-5 object-cover" %>
         <div class= "list-comment">
           <span><%= link_to item.name, item_path(item.id) %></span></br>
-          <span><%= item.price %></span>
+          <span>¥<%= item.price %></span>
             <!--% if item.is_active == true %-->
         </div>
     </div>
   <% end %>
-  <%= paginate @items %>
-</div>
-</div>
+  </div>
+  </div>
+  <div class="row mx-auto">
+    <%= paginate @items %>
+  </div>
 </div>
