--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -3,11 +3,9 @@
     <div class="col">
       <div class="outer">
         <div class="about-text">
-          <div class="position-relative outer">
-            <%= image_tag  "kanban.png", size: '987x800' %>
-            <div class="position-absolute" style="top: 84px; left: 63px;">
+            <div style="top: 84px; left: 63px;">
               <h1 class="text-center m-5" style="border-bottom: 3px dashed #78420e;">About</h1>
-              <p class="text-center" style="font-size: 24px;">
+              <p class="text-center" style="font-size: 24px; font-weight: 500;">
                 ながのCAKEは全国発送可能なケーキ屋さんです。<br>
                 お子様から年寄りの方までお召し上がりいただけるよう、<br>
                 様々なバリエーションをご用意しております。<br>
@@ -19,9 +17,8 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="row">
-    
-<%= image_tag  "3708631_s.jpg", size: '1000x650', style: "margin: 50px 0 100px 438px;", class: "rounded-circle border border-brown" %>
+    <div class="row">
+      <%= image_tag  "3708631_s.jpg", size: '700x450', style: "margin: 50px 0 100px 215px;", class: "rounded-circle border border-brown" %>
+    </div>
   </div>
 </div>
