--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -3,17 +3,17 @@
   <div class="row">
     <div class="col-3">
       <div class="pt-5 pl-5">
-        <nav class="nav flex-column bg-green" style="width: 200px;">
-          <a>ケーキ</a>
-          <a>焼き菓子</a>
-          <a>プリン</a>
-          <a>キャンディ</a>
-        </nav>
+        <!--<nav class="nav flex-column bg-green" style="width: 200px;">-->
+        <!--  <a>ケーキ</a>-->
+        <!--  <a>焼き菓子</a>-->
+        <!--  <a>プリン</a>-->
+        <!--  <a>キャンディ</a>-->
+        <!--</nav>-->
       </div>
     </div>
     <div class="col-9">
       <div class="outer position-relative">
-        <%= image_tag  "e0714_1.png", size: '900x560' %>
+        <%= image_tag  "kanban.png", size: '900x560' %>
         <div class="position-absolute heading">
           <strong>
           <h2>ようこそ、ながのCAKEへ！</h2><br>
