--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -23,7 +23,7 @@
         <div class="form-group row">
           <%= f.label :"メールアドレス",class:"col-sm-3 col-form-label" %>
           <div class="col-sm-9">
-            <%= f.email_field :email, autocomplete: "email", class:"form-control" %>
+            <%= f.email_field :email, autocomplete: "email", class:"form-control", style:"width: 80%;" %>
           </div>
         </div>
 
