--- a/app/views/public/customers/confirm.html.erb
+++ b/app/views/public/customers/confirm.html.erb
@@ -13,9 +13,13 @@
           </strong>
         </p>
       </div>
-      <div class="mt-5 mb-5">
-        <%= link_to "退会しない", current_customer_customers_path, class:"btn btn-green", style:"width: 150px; margin-left: 350px;"%>
-        <%= link_to "退会する", withdraw_current_customer_customers_path, method: :patch, data: { confirm: "本当に退会しますか？" }, class:"btn btn-danger", style:"width: 150px; margin-left: 80px;" %>
+      <div class="mt-5 mb-5 mx-auto d-flex" style="width: 400px;">
+        <div class="w-200">
+          <%= link_to "退会しない", current_customer_customers_path, class:"btn btn-green", style:"width: 150px;"%>
+        </div>
+        <div class="w-200">
+          <%= link_to "退会する", withdraw_current_customer_customers_path, method: :patch, data: { confirm: "本当に退会しますか？" }, class:"btn btn-danger", style:"width: 150px;" %>
+        </div>
       </div>
     </div>
   </div>
