[update]cart_item layout

--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -60,7 +60,7 @@
         <%= f.label :email, "メールアドレス" %>
       </div>
       <div class="col">
-        <%= f.email_field :email %>
+        <%= f.email_field :email, size: 40 %>
       </div>
     </div>
     <div class="row">
