--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,69 +1,64 @@
 <div class= "container">
-    <div class='row'>
-      <div class='col-4'>
-        <h4>ショッピングカート</h4>
-      </div>
-      <div class='col-5'></div>
-      <div class= 'col-3'>
-         <%= link_to "カートを空にする", destroy_all_cart_items_path, method: :delete,class: "btn btn-danger","data-confirm" => "本当に空にしますか？" %>
-      </div>
+  <div class='row mt-4'>
+    <div class="col-lg-3 md-3">
+      <h4>ショッピングカート</h4>
     </div>
-    <div class= "container">
-    <div class='row'>
-      <div class='col-10 offset-1'>
-        <table class='table table-border'>
-          <tr class="table-secondary">
-            <th>商品名</th>
-            <th>単価(税込)</th>
-            <th>数量</th>
-            <th>小計</th>
-            <th><br></th>
-          </tr>
-        <%total = 0 %>
-        <% if current_customer.cart_items.present? %>
-        <% @cart_items.each do |cart_item| %>
-          <tr>
-            <td><%= image_tag cart_item.item.image, size: "150x100" %>
-            <%= cart_item.item.name %></td>
-            <td><%= (cart_item.item.price*1.08).to_i %></td>
-            <td>
-            <%= form_with model: cart_item, url: cart_item_path(cart_item), local: true, method: :patch do |f| %>
-            <%= f.number_field :quantity, min: 1, max:10, id: "quantity_cart"%>
-            <%= f.submit "変更",class: "btn btn-green" %>
-            <% end %>
-            </td>
-            <td>
-            <% subtotal = ((cart_item.item.price*cart_item.quantity)*1.08).to_i %>
-            <%= subtotal %>
-            </td>
-            <td>
-            <%= link_to "削除する", cart_item_path(cart_item.id, cart_item), method: :delete,class: "btn btn-danger" %>
-            </td>
-          </tr>
-            <% total += subtotal %>
+    <div class="col-lg-2 md-1 offset-lg-7">
+      <%= link_to "カートを空にする", destroy_all_cart_items_path, method: :delete,class: "btn btn-danger","data-confirm" => "本当に空にしますか？" %>
+    </div>
+  </div>
+  <div class='row-10 mt-3'>
+    <table class='table table-border table-sm'>
+      <tr class="table-green">
+        <th>商品名</th>
+        <th>単価(税込)</th>
+        <th>数量</th>
+        <th>小計</th>
+        <th><br></th>
+      </tr>
+      <%total = 0 %>
+      <% if current_customer.cart_items.present? %>
+      <% @cart_items.each do |cart_item| %>
+      <tr>
+        <td><%= image_tag cart_item.item.image, size: "90x65" %>
+        <%= cart_item.item.name %></td>
+        <td class="align-middle"><%= (cart_item.item.price*1.08).to_i %></td>
+        <td class="align-middle">
+        <%= form_with model: cart_item, url: cart_item_path(cart_item), local: true, method: :patch do |f| %>
+        <%= f.number_field :quantity, min: 1, max:10, id: "quantity_cart"%>
+        <%= f.submit "変更",class: "btn btn-green" %>
         <% end %>
-        <% end %>
-        </table>
+        </td>
+        <td class="align-middle">
+        <% subtotal = ((cart_item.item.price*cart_item.quantity)*1.08).to_i %>
+        <%= subtotal %>
+        </td>
+        <td class="align-middle">
+        <%= link_to "削除する", cart_item_path(cart_item.id, cart_item), method: :delete,class: "btn btn-danger" %>
+        </td>
+      </tr>
+      <% total += subtotal %>
+      <% end %>
+      <% end %>
+    </table>
+  </div>
   <div class="row">
     <div class= "col-4">
        <tr>
-       <td><%= link_to "買い物を続ける", items_path,class: "btn btn-in" %></td>
+       <td><%= link_to "買い物を続ける", items_path,class: "btn btn-info" %></td>
        </tr>
     </div>
     <div class='col-5'></div>
     <div class="col-3">
       <table class='table table-border'>
-          <th>合計金額</th>
           <tr>
-            <td><%= total %></td>
+            <th class="table-green">合計金額</th>
+            <td style="width:160px"><%= total %></td>
           </tr>
       </table>
     </div>
-  </div>  
+  </div>
   <div class="row justify-content-center">
   <td><%= link_to "情報入力に進む", new_order_path,class: "btn btn-green" %></td>
-  </div>
-    </div>
-    </div>
   </div>
 </div>
