--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,20 +1,63 @@
-<h2>注文履歴詳細</h2>
-<h4>注文情報</h4>
- <div class='col-10'>
-        <table class="table table-bordered border-dark">
-            <tr><th class="table-secondary">注文日</th><td><%= @order.created_at.strftime("%Y-%m-%d") %></td></tr>
-            <tr><th class="table-secondary">配送先</th>
-             <td><%= @order.post_code %>
-                <%= @order.address %>
-                <%= @order.name %></td>
-            </tr>
-            <tr><th class="table-secondary">支払方法</th><td><%= @order.payment_i18n %></td></tr>
-            <tr><th class="table-secondary">ステータス</th><td><%= @order.status_i18n %></td></tr>
-        </table>
+<div class="container-fuild">
+  <div class="row">
+    
+    
   </div>
-<h4>注文内容</h4>
-  <div class="col-3">
-    <table class="table table-borded border-dark">
+  <div class="row">
+    <div class="col-6">
+      <div class="mt-5 ml-5 mb-2">
+      <h2 class="mb-3">注文履歴詳細</h2>
+      <strong>注文情報</strong>
+    </div>
+      <div class="ml-5">
+        <table class="table table-bordered border-dark">
+          <tbody>
+            <tr>
+              <th class="table-green table-th">注文日</th>
+              <td><%= @order.created_at.strftime("%Y/%m/%d") %></td>
+            </tr>
+            <tr>
+              <th class="table-green table-th" style="vertical-align: middle;">配送先</th>
+              <td>
+                〒<%= @order.post_code %><br>
+                <%= @order.address %><br>
+                <%= @order.name %>
+              </td>
+            </tr>
+            <tr>
+              <th class="table-green table-th">支払方法</th>
+              <td><%= @order.payment_i18n %></td>
+            </tr>
+            <tr>
+              <th class="table-green table-th">ステータス</th>
+              <td><%= @order.status_i18n %></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="mb-2" style="margin-top: 125px;">
+        <strong>請求情報</strong>
+      </div>
+      <table class="table table-bordered border-dark">
+        <tr>
+          <th class="table-green">商品合計</th>
+          <td><%= (@order.total_price - @order.postage).to_s%></td>
+        </tr>
+        <tr>
+          <th class="table-green">配送料</th>
+          <td><%= @order.postage %></td>
+        </tr>
+        <tr>
+          <th class="table-green"><strong>ご請求額</strong></th>
+          <td><%= @order.total_price %></td>
+        </tr>
+      </table>
+    </div>
+    <div class="col-7 ml-5">
+      <h4>注文内容</h4>
+      <table class="table table-bordered border-dark">
         <thead class="table-green">
           <tr class="text-nowrap">
             <th>商品</th>
@@ -23,25 +66,19 @@
             <th>小計</th>
           </tr>
         </thead>
-    <tbody>
-       <% @order.ordered_items.each do |ordered_item| %>
-       <tr class="text-nowrap">
-         <td><%= ordered_item.item.name %></td>
-         <td><%= ordered_item.purchase_price %></td>
-         <td><%= ordered_item.quantity %></td>
-         <td><%= (ordered_item.quantity*(ordered_item.item.price*1.08)).floor %></td>
-       </tr>
-       <% end %>
-    </tbody>
-  </table>
+        <tbody>
+         <% @order.ordered_items.each do |ordered_item| %>
+           <tr class="text-nowrap">
+             <td><%= ordered_item.item.name %></td>
+             <td><%= ordered_item.purchase_price %></td>
+             <td><%= ordered_item.quantity %></td>
+             <td><%= (ordered_item.quantity*(ordered_item.item.price*1.08)).floor %></td>
+           </tr>
+         <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
+</div>
   
-  <h4>請求情報</h4>
-<div class='col-3'>
-            <table class="table table-bordered border-dark">
-                <tr><th class="table-secondary">商品合計</th><td><%= (@order.total_price - @order.postage).to_s%> 円</td>
-                <tr><th class="table-secondary">配送料</th><td><%= @order.postage %>円</td></tr>
-                <tr><th class="table-secondary">ご請求額</th><td><%= @order.total_price %>円</td></tr>
-            </table>
-  </div>
+  
