[update]fix-layout

--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -10,6 +10,6 @@
 <h4>宛名</h4>
 <%= f.text_field :name %>
 
-<%= f.submit '変更内容を保存', class: 'btn btn-sm btn-success' %><br>
+<%= f.submit '変更内容を保存', class: "btn btn-green" %><br>
 
 <% end %>
