--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -19,10 +19,10 @@
   <%= f.text_field :address %>
   </div>
   <div class="field">
-  <%= f.label :name, "名前" %>
+  <%= f.label :name, "宛名" %>
   <%= f.text_field :name %>
   </div>
-  <%= f.submit '新規登録', class: "btn btn-success" %>
+  <%= f.submit '新規登録', class: "btn btn-green" %>
 <% end %>
 </div>
     <div class="col-md-8 offset-md-1">
@@ -48,7 +48,7 @@
             <%= address.name %>
           </td>
           <td>
-          <%= link_to "編集する", edit_address_path(address.id), class: "btn btn-success" %>
+          <%= link_to "編集する", edit_address_path(address.id), class: "btn btn-green" %>
           </td>
           <td>
           <%= link_to "削除する", address_path(address.id), class: "btn btn-danger", method: :delete,"data-confirm" => "本当に削除しますか？" %>
