--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -17,7 +17,7 @@
             <% total = 0 %>
             <% @cart_items.each do |cart_item| %>
               <tr>
-                  <td><!--%= attachment_image_tag(cart_item.item, :image, size: "60x50", fallback: "no_image.jpg") %-->
+                  <td><%= image_tag cart_item.item.image, size: "60x50" %>
                       <%= cart_item.item.name %></td>
                   <td><%= (cart_item.item.price*1.08).to_i %></td>
                   <td><%= cart_item.quantity %></td>
@@ -67,7 +67,7 @@
             <%= f.hidden_field :address %>
             <%= f.hidden_field :post_code %>
             <%= f.hidden_field :status %>
-            <%= f.submit "注文を確定する", class: "btn btn-success" %>
+            <%= f.submit "注文を確定する", class: "btn btn-green" %>
         <% end %>
     </div>
 </div>
