--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,38 +1,36 @@
 
 <div class="container">
-
   <div class="row">
-    <div class="col">
       <h2>注文履歴一覧</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>注文日</th>
-        <th>配送先</th>
-        <th>注文商品</th>
-        <th>支払金額</th>
-        <th>ステータス</th>
-        <th>注文詳細</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
+  </div>
+  <div class='row'>
+    <div class='col-12'>
+      <table class='table table-border'>
+        <tr class="table-secondary">
+          <th>注文日</th>
+          <th>配送先</th>
+          <th>注文商品</th>
+          <th>支払金額</th>
+          <th>ステータス</th>
+          <th>注文詳細</th>
+        </tr>
     <% @orders.each do |order| %>
-    <tbody>
       <tr>
         <td><%= order.created_at.strftime("%Y-%m-%d") %></td>
-        <td><%= order.address %></td>
+        <td>〒<%= order.post_code %></br>
+            <%= order.address %></br>
+            <%= order.name %></td>
         <td>
           <% order.ordered_items.each do |order_item| %>
-          <%= order_item.item.name %>
+          <%= order_item.item.name %></br>
           <% end %>
         </td>
         <td><%= order.total_price %></td>
         <td><%= order.status_i18n %></td>
-        <td><%= link_to '表示する', order_path(order.id)%></td>
+        <td><%= link_to '表示する', order_path(order.id),class: "btn btn-info" %></td>
       </tr>
-    </tbody>
     <% end %>
   </table>
-    </div>
   </div>
+</div>
 </div>
